--- a/angular/package.json
+++ b/angular/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "highlightjs-line-numbers.js": "^2.8.0",
+    "ngx-highlightjs": "^6.1.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
