--- a/nginx.conf
+++ b/nginx.conf
@@ -34,11 +34,15 @@ server {
 	    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 	}
 	
-	location /static/  {
+	location /storage/  {
 		autoindex         on;
-		root             /
+		root             /static/;
     }
 	
+	location / {
+		autoindex on;
+		root /static/pages/;
+	}
 	
 
 }
