--- a/angular/package.json
+++ b/angular/package.json
@@ -34,6 +34,7 @@
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
+  "types": "index.d.ts",
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.0",
     "@angular/cli": "~13.3.0",
