- now running ng through npx

--- a/.github/workflows/heroku-deploy.yml
+++ b/.github/workflows/heroku-deploy.yml
@@ -45,8 +45,8 @@ jobs:
       - name: Build angular app
         run: |
           cd angular && 
-          npm i &&
-          ng build &&
+          npm i && 
+          npx ng build &&
           npx scully && 
           cd ../
 
