--- a/.github/workflows/heroku-deploy.yml
+++ b/.github/workflows/heroku-deploy.yml
@@ -33,7 +33,7 @@ jobs:
               machine git.heroku.com
                 login $HEROKU_EMAIL
                 password $HEROKU_API_KEY
-
+          EOF
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
           HEROKU_EMAIL: ${{ secrets.HEROKU_EMAIL }}
