--- a/.github/workflows/heroku-deploy.yml
+++ b/.github/workflows/heroku-deploy.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           node-version: "14"
 
-      - name: Heroku login credentials
+      - name: Setup of heroku login credentials
         run: |
           cat > ~/.netrc <<EOF
             machine api.heroku.com
@@ -38,8 +38,10 @@ jobs:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
           HEROKU_EMAIL: ${{ secrets.HEROKU_EMAIL }}
       
-      - name : Test credentials
-        run : cat ~/.netrc
+      - name : Heroku Login 
+        run : |
+          sudo heroku login && 
+          sudo heroku container:login
 
       - name: Build go server
         run: go build ./cmd/api
