--- a/angular/package.json
+++ b/angular/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/platform-server": "^12",
     "@angular/router": "~13.3.0",
+    "@angular/service-worker": "~13.3.0",
     "@scullyio/init": "^2.1.29",
     "@scullyio/ng-lib": "^2.1.0",
     "@scullyio/platform-server": "^2.1.0",
