--- a/angular/package.json
+++ b/angular/package.json
@@ -43,6 +43,8 @@
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "autoprefixer": "^10.4.4",
+    "cypress": "^9.5.4",
+    "cypress-file-upload": "^5.0.8",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
