- fixed minor bug with file download

--- a/responsive-images.conf
+++ b/responsive-images.conf
@@ -35,7 +35,7 @@ server {
 	    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 	}
 	
-	location /static/storage/  {
+	location /storage/  {
 		autoindex         on;
 		root             /static/;
     }
