Added kubernetes deployment

--- a/responsive-images.conf
+++ b/responsive-images.conf
@@ -2,8 +2,8 @@
 server {
 	rewrite ^([^.]*[^/])$ $1/ permanent;
 	
-	listen $HEROKU_PORT default_server;
-	listen [::]:$HEROKU_PORT default_server;
+	listen 80 default_server;
+	listen [::]:80 default_server;
 
 	# SSL configuration
 	#
